@@ -42,6 +42,9 @@
    - markus@cvs.openbsd.org 2002/06/26 08:54:18
      [buffer.c]
      limit append to 1MB and buffers to 10MB
+   - markus@cvs.openbsd.org 2002/06/26 08:55:02
+     [channels.c]
+     limit # of channels to 10000
 
 20020625
  - (stevesk) [INSTALL acconfig.h configure.ac defines.h] remove --with-rsh
